source_set("common") {
  sources = [
    "common/content_message_generator.cc",
    "common/content_message_generator.h",
    "common/frame_messages.h",
  ]

  deps = [ "//ipc" ]
}

source_set("browser") {
  sources = [
    "browser/webui/brave_shared_resources_data_source.cc",
    "browser/webui/brave_shared_resources_data_source.h",
  ]

  deps = [
    "//base",
    "//brave/ui/webui/resources",
    "//content/public/browser",
    "//ui/base",
  ]
}
