source_set("browser") {
  sources = [
    "browser/webui/brave_shared_resources_data_source.cc",
    "browser/webui/brave_shared_resources_data_source.h",
  ]

  deps = [
    "//base",
    "//brave/components/l10n/common",
    "//brave/ui/webui/resources",
    "//content/public/browser",
    "//ui/base",
  ]
}
